--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </ul>
       </div>
     </section>
-    <!-- <section class="buisness section">
+    <section class="buisness section">
       <div class="container">
         <h2 class="second-title">Чим ми займаємось</h2>
         <ul class="list buisness-list">
@@ -138,13 +138,21 @@
           </li>
         </ul>
       </div>
-    </section> -->
-    <!-- <section class="team section">
+    </section>
+    <section class="team section">
       <div class="container">
         <h2 class="second-title">Наша команда</h2>
         <ul class="list team-list">
           <li class="team-item">
-            <img src="./images/Igor.jpg" width="270" alt="igor" />
+            <img srcset="./images/team/demianenko480.jpg 450w,
+         ./images/team/demianenko480@2x.jpg 900w,
+         ./images/team/demianenko768.jpg 354w,
+         ./images/team/demianenko768@2x.jpg 708w,
+         ./images/team/demianenko1200.jpg 270w,
+         ./images/team/demianenko1200@2x.jpg 540w" sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+        src="./images/team/demianenko480.jpg"
+        alt="Ігор Дем'яненко"
+        loading="lazy" />
             <h3 class="team-title">Ігор Демяненко</h3>
             <p class="team-text">Product Designer</p>
             <ul class="list social-icons">
@@ -171,7 +179,18 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="./images/Olga.jpg" width="270" alt="olga" />
+            <img srcset="
+              ./images/team/repina480.jpg     450w,
+              ./images/team/repina480@2x.jpg  900w,
+              ./images/team/repina768.jpg     354w,
+              ./images/team/repina768@2x.jpg  708w,
+              ./images/team/repina1200.jpg    270w,
+              ./images/team/repina1200@2x.jpg 540w
+              "
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+              src="./images/team/repina480.jpg"
+              alt="Ольга Рєпіна"
+              loading="lazy" />
             <h3 class="team-title">Ольга Репіна</h3>
             <p class="team-text">Frontent Developer</p>
             <ul class="list social-icons">
@@ -198,7 +217,18 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="./images/Mikola.jpg" width="270" alt="mikola" />
+            <img srcset="
+         ./images/team/tarasov480.jpg     450w,
+         ./images/team/tarasov480@2x.jpg  900w,
+         ./images/team/tarasov768.jpg     354w,
+         ./images/team/tarasov768@2x.jpg  708w,
+         ./images/team/tarasov1200.jpg    270w,
+         ./images/team/tarasov1200@2x.jpg 540w
+        "
+        sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+        src="./images/team/tarasov480.jpg"
+        alt="Микола Тарасов"
+        loading="lazy" />
             <h3 class="team-title">Микола Тарасов</h3>
             <p class="team-text">Marketing</p>
             <ul class="list social-icons">
@@ -225,7 +255,18 @@
             </ul>
           </li>
           <li class="team-item">
-            <img src="./images/Misha.jpg" width="270" alt="misha" />
+            <img srcset="
+         ./images/team/yermakov480.jpg     450w,
+         ./images/team/yermakov480@2x.jpg  900w,
+         ./images/team/yermakov768.jpg     354w,
+         ./images/team/yermakov768@2x.jpg  708w,
+         ./images/team/yermakov1200.jpg    270w,
+         ./images/team/yermakov1200@2x.jpg 540w
+        "
+        sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+        src="./images/team/yermakov480.jpg"
+        alt="Михайло Єрмаков"
+        loading="lazy" />
             <h3 class="team-title">Михайло Єрмаков</h3>
             <p class="team-text">UI Designer</p>
             <ul class="list social-icons">
@@ -254,7 +295,7 @@
         </ul>
       </div>
     </section>
-    <section class="clients section">
+    <!-- <section class="clients section">
       <div class="container">
         <h2 class="second-title">Постійні клієнти</h2>
         <ul class="list clients-list">
@@ -302,7 +343,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>  -->
   </main>
   <!-- <footer class="footer">
     <div class="container box-main">
