--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </ul>
       </div>
     </section>
-    <!-- <section class="clients section">
+    <section class="clients section">
       <div class="container">
         <h2 class="second-title">Постійні клієнти</h2>
         <ul class="list clients-list">
@@ -343,54 +343,56 @@
           </li>
         </ul>
       </div>
-    </section>  -->
+    </section>
   </main>
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container box-main">
-      <div class="box-left">
-        <a href="./index.html" class="footer-logo link"><span class="header-nav__logo--web">Web</span>Studio</a>
-        <ul class="list address-list">
-          <li>
-            <a class="link footer-contact-link contact-link-map" target="_blank" rel="noreferrer noopener"
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.
-              Київ, пр-т Лесі Українки, 26</a>
-          </li>
-          <li><a class="link footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link footer-contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </div>
-      <div class="social-box">
-        <p class="social-title">приєднуйтесь</p>
-        <ul class="footer-social list">
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="contact-social-box">
+        <div class="contact-box">
+          <ul class="list footer-contact">
+            <li><a href="./index.html" class="footer-logo link"><span class="header-nav__logo--web">Web</span>Studio</a></li>
+            <li>
+              <a class="link footer-contact-link contact-link-map" target="_blank" rel="noreferrer noopener"
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.
+                Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li><a class="link footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link footer-contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
+        <div class="social-box">
+          <p class="social-title">приєднуйтесь</p>
+          <ul class="footer-social list">
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <form class="subscribe">
         <p class="social-title">підпишіться на розсилку</p>
@@ -398,15 +400,15 @@
           <label for="mail" class="subscribe-label">
             <input id="mail" class="subscribe-mail" type="email" required placeholder="E-mail" />
           </label>
-          <button type="submit" class="subscribe-button">Підписатися
+          <button type="submit" class="subscribe-button"><div class="subscribe-button__div">Підписатися
             <svg class="send-logo" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
-            </svg>
+            </svg></div>
           </button>
         </div>
       </form>
     </div>
-  </footer> -->
+  </footer>
 
   <div class="modal is-hidden" data-modal>
     <div class="modal-window">
@@ -473,8 +475,8 @@
       </div>
     </div>
   </div>
-  <script src="/js/modal.js"></script>
-  <script src="/js/modal-new.js"></script>
-  <script src="/js/menu-mobile.js"></script>
+  <script src="./js/modal.js"></script>
+  <script src="./js/modal-new.js"></script>
+  <script src="./js/menu-mobile.js"></script>
   </body>
 </html>
