--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
           <label for="mail" class="subscribe-label">
             <input id="mail" class="subscribe-mail" type="email" required placeholder="E-mail" />
           </label>
-          <button type="submit" class="subscribe-button"><div class="subscribe-button__div">Підписатися
+          <button type="submit" class="subscribe-button">Підписатися
             <svg class="send-logo" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
-            </svg></div>
+            </svg>
           </button>
         </div>
       </form>
