--- a/portfolio.html
+++ b/portfolio.html
@@ -15,37 +15,56 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <nav class="header-nav">
-        <a href="./index.html" class="header-nav__logo link">
-          <span class="header-nav__logo--web link">Web</span>Studio</a>
-  
-        <ul class="header-list list">
-          <li class="header-list__item"><a class="header-nav__link link" href="./index.html">Студія</a></li>
-          <li class="header-list__item"><a class="header-nav__link link current" href="./portfolio.html">Портфоліо</a></li>
-          <li class="header-list__item"><a class="header-nav__link link" href="#">Контакти</a></li>
+  <header class="header header--border">
+    <nav class="header-nav container">
+      <a href="./index.html" class="header-nav__logo link">
+        <span class="header-nav__logo--web link">Web</span>Studio</a>
+      <button type="button" class="mobile-menu" aria-expanded="false" aria-controls="mobile-menu" data-menu-button>
+        <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+          <use class="mobile-menu__open" href="./images/icons.svg#icon-menu_header"></use>
+          <use class="mobile-menu__close" href="./images/icons.svg#icon-close_header"></use>
+        </svg>
+      </button>
+      <div class="header-mobile is-open" data-menu>
+        <ul class="header-nav__list">
+          <li class="list header-nav__item">
+            <a class="link header-nav__link" href="./index.html">Студія</a>
+          </li>
+          <li class="list header-nav__item">
+            <a class="link header-nav__link header-nav__link--is-active" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="list header-nav__item">
+            <a class="link header-nav__link" href="">Контакти</a>
+          </li>
         </ul>
   
-        <ul class="header-contact list">
-          <li class="header-contact__item">
-            <a class="header-contact__item__link link" href="mailto:info@devstudio.com">
-              <svg class="header-contact__icon" width="16" height="12">
+        <ul class="header-contacts header-contacts__indent-left">
+          <li class="list header-contacts__list">
+            <a class="link header-contacts__link header-contacts__link--email" href="mailto:info@devstudio.com">
+              <svg class="header-contacts__icon header-contacts__icon-indent-right" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
-              </svg>info@devstudio.com
-            </a>
+              </svg>
+              info@devstudio.com</a>
           </li>
-          <li class="header-contact__item">
-            <a class="header-contact__item__link link" href="tel:+380961111111">
-              <svg class="header-contact__icon" width="10" height="16">
+          <li class="list header-contacts__list">
+            <a class="link header-contacts__link header-contacts__link--tel" href="tel:+380961111111">
+              <svg class="header-contacts__icon header-contacts__icon-indent-right" width="10" height="16">
                 <use href="./images/icons.svg#icon-phone"></use>
-              </svg>+38 096 111 11 11
-            </a>
+              </svg>
+              +38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-    </div>
   
+        <ul class="mobile__social-list">
+          <li class="list mobile__social-item">
+            <a href="" class="link mobile__social-link">Instagram</a>
+          </li>
+          <li class="list mobile__social-item"><a href="" class="link mobile__social-link">Twitter</a></li>
+          <li class="list mobile__social-item"><a href="" class="link mobile__social-link">Facebook</a></li>
+          <li class="list mobile__social-item"><a href="" class="link mobile__social-link">LinkedIn</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
   <main>
     <section class="filter-nav container section">
@@ -207,50 +226,53 @@
   </main>
   <footer class="footer">
     <div class="container box-main">
-      <div class="box-left">
-        <a href="./index.html" class="footer-logo link"><span class="header-nav__logo--web">Web</span>Studio</a>
-        <ul class="list address-list">
-          <li>
-            <a class="link footer-contact-link contact-link-map" target="_blank" rel="noreferrer noopener"
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.
-              Київ, пр-т Лесі Українки, 26</a>
-          </li>
-          <li><a class="link footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link footer-contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </div>
-      <div class="social-box">
-        <p class="social-title">приєднуйтесь</p>
-        <ul class="footer-social list">
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="social-link social-link--footer" href="#">
-              <svg class="social-logo" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="contact-social-box">
+        <div class="contact-box">
+          <ul class="list footer-contact">
+            <li><a href="./index.html" class="footer-logo link"><span class="header-nav__logo--web">Web</span>Studio</a>
+            </li>
+            <li>
+              <a class="link footer-contact-link contact-link-map" target="_blank" rel="noreferrer noopener"
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.
+                Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li><a class="link footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link footer-contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </div>
+        <div class="social-box">
+          <p class="social-title">приєднуйтесь</p>
+          <ul class="footer-social list">
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link social-link--footer" href="#">
+                <svg class="social-logo" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <form class="subscribe">
         <p class="social-title">підпишіться на розсилку</p>
